--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
-    <script src="./app.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
