--- a/index.html
+++ b/index.html
@@ -35,9 +35,20 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#" id="history-link">History</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="cost-link">Cost</a>
+                </li>
             </ul>
-            <ul class="navbar-nav">
-                
+            <span class="navbar-text mx-auto">
+                powered by <img src="src/Amazon_Web_Services-Logo.wine.png" alt="AWS Logo" style="height: 30px; vertical-align: middle;">
+            </span>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <span class="navbar-text" id="username">Username</span>
+                </li>
+                <li class="nav-item">
+                    <button class="btn btn-outline-light ml-2" id="logout-button">Logout</button>
+                </li>
             </ul>
         </div>
     </nav>
