--- a/index.html
+++ b/index.html
@@ -362,5 +362,7 @@
         window.appConfig = config;
     </script>
     <script type="module" src="app.js"></script>
+    <script src="src/config.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
