--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AWS File Manager</title>
-    <!-- Add Favicon -->
+    <script type="module" src="dist/config.js"></script>
+    <script type="module" src="app.js"></script>
     <link rel="icon" type="image/x-icon" href="src/favicon.ico">
     <!-- External Scripts -->
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1001.0.min.js"></script>
