--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AWS File Manager</title>
     <script type="module" src="dist/config.js"></script>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app.js"></script><!-- Add Favicon -->
     <link rel="icon" type="image/x-icon" href="src/favicon.ico">
     <!-- External Scripts -->
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1001.0.min.js"></script>
@@ -358,12 +358,7 @@
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-    <script type="module">
-        import config from './config.js';
-        window.appConfig = config;
-    </script>
-    <script type="module" src="app.js"></script>
-    <script src="src/config.js"></script>
-    <script src="dist/bundle.js"></script>
+    <script src="config.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
